frps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: frps-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  rules:
  - host: "*.frp.way2hacker.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frps
            port:
              name: frps-web
